# llvm-project

DLDefaultAdvisor/: .gitignore  CMakeLists.txt  DLDefaultAdvisor.cpp  DLDefaultAdvisor.h
DLInlineAdvisor/: CMakeLists.txt  DLInlineAdvisor.cpp  DLInlineAdvisor.h  InlineAdvisor.cpp  makefile
DynamicAdvisorPlugin/: CMakeLists.txt  example.cpp
llvm/include/llvm/Analysis/: InlineAdvisor.h  InlineOrder.h
llvm/lib/Analysis/: InlineAdvisor.cpp  InlineOrder.cpp
llvm/lib/Passes/: PassBuilderPipelines.cpp
llvm/lib/Transforms/IPO/: ModuleInliner.cpp
llvm/test/Transforms/Inline/: module-inliner-basic.ll  top-down-inliner-multiple-heads.ll  top-down-inliner-recursion.ll  top-down-inliner-simple.ll
llvm/unittests/Analysis/: CMakeLists.txt  PluginInlineAdvisorAnalysisTest.cpp  PluginInlineOrderAnalysisTest.cpp
llvm/unittests/Analysis/InlineOrderPlugin/: CMakeLists.txt  InlineOrderPlugin.cpp
llvm/unittests/Transforms/IPO/: CMakeLists.txt  DAdvisor.cpp  DynamicallyLoadedInliningAdvisor.cpp
my-inline-info/: build.sh  makefile  my-inline-info.cpp
